--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es6",
+  "name": "wb4",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,11 +9,15 @@
   },
   "keywords": [],
   "author": "",
-  "licelicense": "ISC",
+  "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.5.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
